# vedantu_assign

./: README.md  cli.py  data_loader.py  models.py  semantic_search.py  serialization.py  server.py
chatbot/: README.md  pyproject.toml
chatbot/data/: student_profile.json  study_materials.json
chatbot/src/study_assistant/: assistant.py
chatbot/tests/: test_assistant.py
data/: performance_history.json  upcoming_tests.json
src/study_assistant/: __init__.py  embeddings.py  langgraph_agent.py  tools.py
tests/: test_server.py
