[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "student-study-assistant"
version = "0.1.0"
description = "A lightweight AI-style study assistant using semantic retrieval and tool calls."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "langchain-core>=1.0.0",
  "langchain-openai>=1.0.0",
  "langgraph>=1.0.0",
  "openai>=2.0.0",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
study-assistant = "study_assistant.cli:main"
study-assistant-api = "study_assistant.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
